--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     })();
     </script>
 <div id="add1">  
-<iframe src="http://127.0.0.1:5500/add1.html" width="400" height="400" scrolling="no" title="Example Website"></iframe>
+<iframe src="https://japanicartoo.github.io/ads/" width="400" height="400" scrolling="no" title="Example Website"></iframe>
 </div>
 </body>
 </html>
