--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="container-f8b0fc5d2d15f9c7db79f34458dee766"></div> 
 </br>
     <div>  
-<iframe src="https://japanicartoo.github.io/ads/" width="400" height="400" scrolling="no" title="Example Website"></iframe>
+<iframe src="https://japanicartoo.github.io/ads2/" width="400" height="400" scrolling="no" title="Example Website"></iframe>
     </div>
 <center>
     <span id="countdown">Just wait only 15 seconds to start DOWNLOAD.</span></center>
