--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </style>
 </head>
 <body>
+    <span>Scroll Down and click 'DONWLOAD LINK'</span>
     <script async="async" data-cfasync="false" src="//pl25102071.profitablecpmrate.com/f8b0fc5d2d15f9c7db79f34458dee766/invoke.js"></script>
     <div id="container-f8b0fc5d2d15f9c7db79f34458dee766"></div> 
 </br>
@@ -30,7 +31,7 @@
 <iframe src="https://japanicartoo.github.io/ads2/" width="400" height="400" scrolling="no" title="Example Website"></iframe>
     </div>
 <center>
-    <span id="countdown">Just wait only 15 seconds to start DOWNLOAD.</span></center>
+    <span id="countdown">Just wait only 10 seconds to start DOWNLOAD.</span></center>
 </br>
 <div id="download_link" style="display: none;">       
 </br>
@@ -43,7 +44,7 @@
     (function(){
        var message = "%d seconds before download link appears";
    
-       var count = 15;
+       var count = 10;
        var countdown_element = document.getElementById("countdown");
        var download_link = document.getElementById("download_link");
        var timer = setInterval(function(){
